--- a/01 - JavaScript Drum Kit/index-START.html
+++ b/01 - JavaScript Drum Kit/index-START.html
@@ -48,7 +48,14 @@
     </div>
   </div>
 
-  <audio data-key="65" class="key-65" src="sounds/clap.wav"></audio>
+  <div class="keys">
+    <div data-key="32" class="key">
+      <kbd>SPACE</kbd>
+      <span class="sound">cheer</span>
+    </div>
+  </div>
+
+  <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
   <audio data-key="68" src="sounds/kick.wav"></audio>
   <audio data-key="70" src="sounds/openhat.wav"></audio>
@@ -57,6 +64,7 @@
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="32" src="sounds/people_people-performance-cheer1.mp3"></audio>
 
   <script>
     function playSound(e) { // jQueryイベント
